--- a/word2vec.ipynb
+++ b/word2vec.ipynb
@@ -92,40 +92,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x_train = np.array(x_train) #each word is a vertor of 300th dimensions WAL"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 136,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from keras import backend as K\n",
-    "from keras.engine.topology import Layer\n",
-    "import numpy as np\n",
-    "\n",
-    "class Parse(Layer):\n",
-    "\n",
-    "    def __init__(self, **kwargs):\n",
-    "        super(Parse, self).__init__(**kwargs)\n",
-    "\n",
-    "    def build(self, input_shape):\n",
-    "        super(Parse, self).build(input_shape)\n",
-    "\n",
-    "    def call(self, pred):\n",
-    "        return print(dir(pred))#np.array(list(map(lambda x: x[0] ,np.array(pred))))\n",
-    "\n",
-    "    def compute_output_shape(self, input_shape):\n",
-    "        return (input_shape[0], self.output_dim)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -139,8 +105,7 @@
     "model.add(Dropout(0.25))\n",
     "model.add(GRU(300,return_sequences=True))\n",
     "model.add(TimeDistributed(Dense(127, activation='softmax')))\n",
-    "model.add(MaxPooling1D(64*4))\n",
-    "model.add(Parse())\n",
+    "model.add(MaxPooling1D(64*4)) # maybe this works?\n",
     "model.compile('rmsprop', 'categorical_crossentropy')\n"
    ]
   },
@@ -150,7 +115,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sent = x_train[0]\n",
+    "sent = x_train[0] #x_train is the train sentences encoded using word2vec\n",
     "\n",
     "pred = model.predict_on_batch(sent)\n",
     "#pred = np.array(list(map(lambda x: x[0] ,pred)))"
@@ -232,6 +197,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Next steps from the source file"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 124,
    "metadata": {},
@@ -240,9 +212,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\r",
-      "                                                                               \r",
-      "\r",
       "N/A% (0 of 4978) |                       | Elapsed Time: 0:00:00 ETA:  --:--:--"
      ]
     },
